# oniguruma

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  ja.Doxyfile
.devcontainer/: devcontainer.json  updateContentCommand.sh
.github/workflows/: cmake-build-target-html.yml  cmake-build.yml  deploy-pages.yml  doxygen.yml
docs/: api.ja.md  api.md
docs/api/: index.ja.md
docs/en/: api.md  regex-syntax.md
docs/en/examples/: bug_fix.c  count.c  crnl.c  echo.c  encode.c  regset.c  scan.c  sql.c  syntax.c  user_property.c
docs/en/examples/simple-grep/: CMakeLists.txt  README.md
docs/en/examples/windows/: CMakeLists.txt
docs/examples/: callback_each_match.c  callout.c  listcap.c  names.c  posix.c  simple.c
docs/examples/simple-grep/: main.c
docs/examples/windows/: testc.c
harnesses/: base.c  deluxe.c  regset.c
html/: index.html
include/: oniggnu.h  onigposix.h  oniguruma.h
src/: ascii.c  big5.c  cp1251.c  euc_jp.c  euc_jp_prop.c  euc_kr.c  euc_tw.c  gb18030.c  iso8859_1.c  iso8859_10.c  iso8859_11.c  iso8859_13.c  iso8859_14.c  iso8859_15.c  iso8859_16.c  iso8859_2.c  iso8859_3.c  iso8859_4.c  iso8859_5.c  iso8859_6.c  iso8859_7.c  iso8859_8.c  iso8859_9.c  koi8.c  koi8_r.c  mktable.c  onig_init.c  regcomp.c  regenc.c  regenc.h  regerror.c  regexec.c  regext.c  reggnu.c  regint.h  regparse.c  regparse.h  regposerr.c  regposix.c  regsyntax.c  (+21 more)
test/: CMakeLists.txt  test_back.c  test_options.c  test_regset.c  test_syntax.c  test_utf8.c  testc.c  testp.c  testu.c
